# openjury

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  cli.md  composable-api.md  config-schema.md  config.schema.json  endpoint-config.md  provider-config.md
examples/: README.md
examples/assertions/: README.md  config.json
examples/basic_usage/: README.md  basic_jury_run.py  config.json  endpoints.json
examples/batch_eval/: README.md  batch_run.py  sample_dataset.csv  sample_dataset.jsonl
examples/consistency_audit/: README.md  config.json  consistency_run.py
examples/custom_scoring/: README.md  config.json  custom_scoring.py
examples/custom_voting_method/: README.md  config.json  custom_voting.py
examples/hello_world/: README.md  config.json  score_existing.py
examples/kitchen_sink/: README.md  config.json  endpoints.json  kitchen_sink_run.py
examples/provider_configs/: README.md  mixed_providers.json  openrouter.json  (+5 more)
notebooks/: 00_quickstart.ipynb  01_config_and_providers.ipynb  02_batch_and_metrics.ipynb  README.md
recipes/: README.md  batch-eval-pipeline.md  ci-quality-gate.md  consistency-audit-before-ship.md  crash-recovery-resume.md  custom-scoring-gate.md  design-rubrics.md  local-ollama-jury.md  mixed-provider-jury.md  openrouter-on-a-budget.md  score-without-fetching.md  streaming-agent-endpoint.md
scripts/: bootstrap.sh  export_config_schema.py
tests/: __init__.py  conftest.py  test_agent_eval.py  test_assertion_resolution.py  test_assertions.py  test_batch_dataset.py  test_batch_summary.py  test_classify_item_error.py  test_cli.py  test_custom_voting.py  test_endpoint_fetcher.py  test_error_handling.py  test_errors.py  test_evaluate_items.py  test_execution.py  test_juror.py  test_juror_retry.py  test_jury_engine.py  test_models.py  test_provider_errors.py  test_provider_resolution.py  test_scoring.py  test_serialization.py  test_verdict.py  test_voting.py
(+28 files in other folders)
