[project]
name = "openjury"
version = "0.1.0"
description = "Python SDK for evaluating multiple model outputs using configurable LLM-based jurors"
authors = [{ name = "robiscoding", email = "robiscodingg@gmail.com" }]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = [
    "llm",
    "evaluation",
    "ai",
    "model-consensus",
    "llm-as-a-judge",
    "model-comparison",
    "openai",
    "langchain",
    "machine-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/robiscoding/openjury"
Repository = "https://github.com/robiscoding/openjury"
Issues = "https://github.com/robiscoding/openjury/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/openjury"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.twine]
repository = "pypi"
repository-test = "testpypi"
